SDB-4: fixes